tests/neg-custom-args/safe-init/inner10.scala
object Flags {
  class Inner {
    println(b)            // error
  }

  new Flags.Inner         // error
  val b = 5
}
